# modelcontextprotocol-rust-sdk

./: Cargo.toml  README.md  flake.nix
src/: lib.rs
src/server/: README.md  mod.rs
src/shared/: README.md
